syntax = "proto3";

package customer;

option java_package = "com.act.infinity.order.grpc";
option java_multiple_files = true;

message Order {
  int32 id = 1;
  int32 customerId = 2;
  int32 orderNumber = 3;

}
message GetCustomerOrderRequest {
  int32 customerId =1;
}

message GetOrderResponse {
  Order response = 1;
}
message GetOrderListResponse {
  repeated Order response =1;
}

service OrderService {
  rpc GetCustomerOrder(GetCustomerOrderRequest) returns (GetOrderResponse) {};
  rpc GetCustomerOrderList(GetCustomerOrderRequest) returns (GetOrderListResponse) {};

}